completed questions template and updated readme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Coding Quiz Challenge</title>
+    <title>Quiz Challenge</title>
 </head>
 
 <body>
@@ -15,9 +15,9 @@
     <div class="wrap">
 
         <div id="start-screen" class="start">
-            <h1>Coding Quiz Challenge</h1>
+            <h1>History Quiz Challenge</h1>
 
-            <p> Try to answer the following code-related questions within the time limit.
+            <p> Try to answer the following History-related questions within the time limit.
                 Keep in mind that incorrect anwsers will penalize your
                 scoretime by 10 seconds!
             </p>
